Sun Sep 21 19:28:03 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* gtkgame.c (GTKMatchInfo): show match comment text, rearrange window,
	fix memory leak

Sun Sep 21 16:57:55 2003  Joern Thyssen  <jth@gnubg.org>

	* import.c (ParseOldMove): fix a few problems with the FIBS
	oldmoves import.
	(reported by Joseph)

Sat Sep 20 22:07:59 2003  Joern Thyssen  <jth@gnubg.org>

	* formatgs.c (errorrateMP): allow control of number of digits in 
	error rate and allow control over factor used (default is 1000).
	* gnubg.c: new command "set output errorratefactor ...".
	* set.c (CommandSetOutputErrorRateFactor): new function.

Fri Sep 19 20:23:46 GMT 2003  Jim Segrave <jes@jes-2.demon.nl>

	* boarddim.h - reverse cube locations, gtkgame.c - micro-typo
	  in dice drawing area
	
Fri Sep 19 19:53:02 GMT 2003  Jim Segrave <jes@jes-2.demon.nl>

	* Makefile.am, Makefile.in - add timer.c to sources

Fri Sep 19 20:59:43 2003  Joern Thyssen  <jth@gnubg.org>

	* eval.c (getPercent): fix bugs for "strange" match play
	scenarios (see 2-ply and 3-ply eval on cAmgACAAGAAA/4HPkAUgzW8EBMA)
	(reported by Ege Lundgren)	

Fri Sep 19 09:34:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: Add tab-completion to the command dialog

Thu Sep 19 22:06:27 2003 GMT  Jim Segrave <jes@jes-2.demon.nl>

	* first cut at paramaterising board. It now appears to be possible
	  to alter the aspect ratio (adding space in the middle). A 72x108
	  board is buildable, but should not be used (there's no guarantee
	  that the dice or doubling cube can be placed on the board
	  without intersecting chequers, although changing the die and 
	  doubling cube size will fix that)


Wed Sep 17 11:42:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* timercontrol.c: Changed timing function for win32
	moved timer.c to main direcory

Tue Sep 16 17:42:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.c, gtkgame.c: Add dynamic help to enter command.

