@@ -12,7 +12,7 @@
      is permitted in any medium provided the copyright notice and this
      permission notice are preserved.
 
-     $Id: boards.xml,v 1.18 2003/09/12 14:03:59 Superfly_Jon Exp $
+     $Id: boards.xml,v 1.19 2003/09/22 11:03:07 Superfly_Jon Exp $
 
  -->
 
@@ -329,6 +329,7 @@
          points0=#49D441;0.00   
          points1=#0A6810;0.00   
          piecetype=0
+         piecetexturetype=1
          roundededges=y
          lighttype=p
          lightposx=0.000000 lightposy=2.000000 lightposz=3.500000
@@ -423,6 +424,7 @@
          points0=#8B8C8E;0.09
          points1=#D4D4D4;0.09
          piecetype=0
+         piecetexturetype=0
          roundededges=y
          lighttype=p
          lightposx=0.000000 lightposy=2.000000 lightposz=3.500000
