@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: gtkboard.h,v 1.49 2003/09/12 13:35:23 steink Exp $
+ * $Id: gtkboard.h,v 1.50 2003/09/22 11:03:07 Superfly_Jon Exp $
  */
 
 #ifndef _GTKBOARD_H_
@@ -215,6 +215,7 @@ typedef struct _BoardData {
 	float backGroundPos[2], backGroundSize[2];
 
 	PieceType pieceType;	/* Different piece models */
+	PieceTextureType pieceTextureType;	/* Different piece texture types */
 
 	BoardState State;	/* Open/closed board */
 	float perOpen;	/* Percentage open when opening/closing board */
